working on text

--- a/docs/setup.mdx
+++ b/docs/setup.mdx
@@ -17,10 +17,14 @@ I recommend adding ...
 ### 4. Enjoy weighYourJunk
 
 
-
-
-
 You're ready to use weighYourJunk as a weight scale in your junk trucks.
 
+Hardware Type of
+Terminal
+buttons
+cables display
 
+iPad
+
+software
 
